--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BABRN Turbo | Enhanced Transcription</title>
+    <title>BABRN Turbo | Clean Edition</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -22,7 +22,7 @@
         body.theme-light {
             --bg-body: #f1f5f9;
             --bg-glass: rgba(255, 255, 255, 0.6); 
-            --text-main: #001f3f; /* Navy Blue */
+            --text-main: #001f3f; /* Navy Blue Lettering */
             --accent: #059669; /* Emerald Green */
             --input-bg: rgba(255, 255, 255, 0.8);
             --border: rgba(0, 31, 63, 0.1);
@@ -33,7 +33,7 @@
         .glass-panel { background: var(--bg-glass); backdrop-filter: blur(15px); border: 1px solid var(--border); box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
         .medical-canvas { font-family: 'JetBrains Mono', monospace; background: var(--input-bg); color: var(--text-main); line-height: 1.8; border: 1px solid var(--border); }
         .input-accent { background: var(--input-bg); border: 1px solid var(--border); color: var(--text-main); font-weight: 600; }
-        .input-accent:focus { border-color: var(--accent); outline: none; box-shadow: 0 0 0 3px rgba(5, 150, 105, 0.2); }
+        .input-accent:focus { border-color: var(--accent); outline: none; }
         .nav-custom { background: var(--nav-bg); color: white; }
         .word-badge { background: var(--accent); color: white; padding: 2px 10px; border-radius: 20px; font-size: 10px; font-weight: 800; }
     </style>
@@ -42,8 +42,8 @@
 
     <nav class="nav-custom no-print sticky top-0 z-50 px-6 py-4 mb-8 flex justify-between items-center shadow-lg">
         <div class="flex items-center gap-3">
-            <div class="bg-emerald-500 p-2 rounded-lg shadow-lg"><i class="fas fa-microchip text-white"></i></div>
-            <h1 class="text-xl font-bold tracking-tighter uppercase">BABRN <span class="text-emerald-400">Turbo AI</span></h1>
+            <div class="bg-emerald-500 p-2 rounded-lg shadow-lg"><i class="fas fa-microphone-alt text-white"></i></div>
+            <h1 class="text-xl font-bold tracking-tighter uppercase">BABRN <span class="text-emerald-400">Turbo</span></h1>
         </div>
 
         <div class="flex gap-3 bg-white/10 p-1.5 rounded-full">
@@ -66,36 +66,36 @@
                         <i class="fas fa-play"></i> Record
                     </button>
                     <button id="stop-btn" class="hidden w-full bg-red-600 text-white font-bold py-4 rounded-2xl mb-4 animate-pulse uppercase tracking-widest flex items-center justify-center gap-2">
-                        <i class="fas fa-stop"></i> Stop & Fix
-                    </button>
-
-                    <button onclick="smartImproveEnglish()" class="w-full bg-indigo-600 text-white font-bold py-3 rounded-xl mb-6 text-[10px] uppercase tracking-widest flex items-center justify-center gap-2 hover:bg-indigo-700 transition-all">
-                        <i class="fas fa-magic"></i> Smart Fix English
+                        <i class="fas fa-stop"></i> Stop Session
                     </button>
 
                     <div id="audio-replay-container" class="hidden mb-6 p-4 rounded-xl border bg-black/5" style="border-color: var(--border)">
-                        <p class="text-[9px] font-bold mb-2 opacity-60 uppercase">Audio Reference</p>
+                        <p class="text-[9px] font-bold mb-2 opacity-60 uppercase tracking-widest">Audio Reference</p>
                         <audio id="audio-player" controls class="w-full h-8"></audio>
                     </div>
 
                     <div class="space-y-3 pt-4 border-t" style="border-color: var(--border)">
-                        <button onclick="copyAllText()" class="w-full py-3 rounded-xl text-[10px] font-bold uppercase border hover:bg-black/5" style="border-color: var(--border)">
+                        <button onclick="copyAllText()" class="w-full py-3 rounded-xl text-[10px] font-bold uppercase border hover:bg-black/5 transition-all" style="border-color: var(--border)">
                             <i class="fas fa-copy mr-2"></i> Copy Text
                         </button>
-                        <button onclick="syncToGoogle()" id="cloud-btn" class="w-full bg-blue-700 text-white font-bold py-4 rounded-xl text-[10px] uppercase shadow-lg">
+                        <button onclick="syncToGoogle()" id="cloud-btn" class="w-full bg-blue-700 text-white font-bold py-4 rounded-xl text-[10px] uppercase shadow-lg hover:bg-blue-800 transition-all">
                             <i class="fas fa-cloud-upload-alt mr-2"></i> Sync Cloud
                         </button>
                     </div>
                 </div>
+                
+                <button onclick="prepareNewSession()" class="w-full glass-panel font-bold py-4 rounded-2xl flex items-center justify-center gap-3 hover:bg-black/5 transition-all">
+                    <i class="fas fa-plus text-emerald-600"></i> NEW SESSION
+                </button>
             </div>
 
             <div class="lg:col-span-9">
                 <div class="glass-panel rounded-3xl p-8 shadow-xl">
                     <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-6">
-                        <input type="text" id="session-prepared-by" placeholder="Prepared By" class="input-accent p-3 rounded-xl text-xs">
-                        <input type="text" id="session-dept" placeholder="Dept" class="input-accent p-3 rounded-xl text-xs">
-                        <input type="text" id="session-title" placeholder="Title" class="input-accent p-3 rounded-xl text-xs">
-                        <input type="date" id="session-date-picker" class="input-accent p-3 rounded-xl text-xs">
+                        <input type="text" id="session-prepared-by" placeholder="Prepared By" class="input-accent p-3 rounded-xl text-xs shadow-inner">
+                        <input type="text" id="session-dept" placeholder="Dept" class="input-accent p-3 rounded-xl text-xs shadow-inner">
+                        <input type="text" id="session-title" placeholder="Title" class="input-accent p-3 rounded-xl text-xs shadow-inner">
+                        <input type="date" id="session-date-picker" class="input-accent p-3 rounded-xl text-xs shadow-inner">
                     </div>
 
                     <div class="flex justify-between items-center mb-2 px-2">
@@ -103,22 +103,22 @@
                             <i class="fas fa-clock"></i> TIMESTAMP
                         </button>
                         <div class="flex items-center gap-2">
-                            <span class="text-[10px] font-bold opacity-60 uppercase">Words:</span>
+                            <span class="text-[10px] font-bold opacity-60 uppercase">Word Count:</span>
                             <span id="word-count" class="word-badge">0</span>
                         </div>
                     </div>
 
                     <textarea id="output" 
                         oninput="updateWordCount()" 
-                        class="medical-canvas w-full h-[550px] p-8 rounded-2xl text-lg focus:outline-none resize-none" 
-                        placeholder="Start speaking English or Taglish..."></textarea>
+                        class="medical-canvas w-full h-[550px] p-8 rounded-2xl text-lg focus:outline-none resize-none shadow-inner" 
+                        placeholder="Transcription text..."></textarea>
                 </div>
             </div>
         </div>
 
         <div id="view-library" class="hidden">
             <div class="glass-panel rounded-3xl p-8 min-h-[600px]">
-                <h2 class="text-xl font-bold mb-8 uppercase">Archives</h2>
+                <h2 class="text-xl font-bold mb-8 uppercase tracking-tighter">Local Archives</h2>
                 <div id="library-list" class="grid grid-cols-1 md:grid-cols-3 gap-6"></div>
             </div>
         </div>
@@ -128,30 +128,10 @@
         const SCRIPT_URL = "https://script.google.com/macros/s/AKfycby6ZIAuBnLUogVY6UxY-4TNb3Zy7iRCVi56UtpfkLg79LXbiTo97PnroSo96lvBS3FF/exec";
         let db, mediaRecorder, chunks = [], finalTranscript = "";
 
-        // SMART ENGLISH IMPROVEMENT ALGORITHM
-        function smartImproveEnglish() {
-            let text = document.getElementById('output').value;
-            if(!text) return;
-
-            // 1. Capitalize first letter of sentences
-            text = text.replace(/(^\s*|[.!?]\s+)([a-z])/g, m => m.toUpperCase());
-            // 2. Fix the "i" pronoun
-            text = text.replace(/\b i \b/g, " I ");
-            text = text.replace(/\bi'm\b/g, "I'm");
-            text = text.replace(/\bi'll\b/g, "I'll");
-            // 3. Common English medical/business transcript fixes
-            text = text.replace(/ patient s /gi, " patient's ");
-            text = text.replace(/ dont /gi, " don't ");
-            text = text.replace(/ cant /gi, " can't ");
-            
-            document.getElementById('output').value = text;
-            finalTranscript = text;
-            alert("English formatting improved!");
-        }
-
         function updateWordCount() {
             const text = document.getElementById('output').value.trim();
-            document.getElementById('word-count').innerText = text ? text.split(/\s+/).length : 0;
+            const count = text ? text.split(/\s+/).length : 0;
+            document.getElementById('word-count').innerText = count;
         }
 
         function setTheme(theme) {
@@ -161,27 +141,20 @@
         }
         setTheme(localStorage.getItem('babrn-theme') || 'dark');
 
-        const request = indexedDB.open("BABRN_V9", 1);
+        const request = indexedDB.open("BABRN_V10", 1);
         request.onupgradeneeded = e => e.target.result.createObjectStore("sessions", { keyPath: "id" });
         request.onsuccess = e => { db = e.target.result; document.getElementById('session-date-picker').valueAsDate = new Date(); loadLibrary(); };
 
-        // DUAL-LANGUAGE ENGINE (PH/US)
         const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
         recognition.continuous = true; 
         recognition.interimResults = true; 
-        recognition.lang = 'en-US'; // Set to English-US primary for better English recognition
+        recognition.lang = 'en-US'; 
 
         recognition.onresult = (e) => {
             let interim = "";
             for (let i = e.resultIndex; i < e.results.length; ++i) {
-                if (e.results[i].isFinal) {
-                    let speech = e.results[i][0].transcript;
-                    // Auto-Capitalize 'I'
-                    speech = speech.replace(/\b i \b/g, " I ");
-                    finalTranscript += speech + " ";
-                } else {
-                    interim += e.results[i][0].transcript;
-                }
+                if (e.results[i].isFinal) finalTranscript += e.results[i][0].transcript + " ";
+                else interim += e.results[i][0].transcript;
             }
             document.getElementById('output').value = finalTranscript + interim;
             updateWordCount();
@@ -207,8 +180,6 @@
             mediaRecorder.stop(); recognition.stop();
             document.getElementById('start-btn').classList.remove('hidden');
             document.getElementById('stop-btn').classList.add('hidden');
-            // Auto-fix English on stop
-            setTimeout(smartImproveEnglish, 500);
         };
 
         function saveToLocal(blob) {
@@ -222,10 +193,11 @@
                 audio: blob
             };
             db.transaction("sessions", "readwrite").objectStore("sessions").add(data);
+            loadAudioPlayer(blob);
         }
 
         async function syncToGoogle() {
-            const btn = document.getElementById('cloud-btn'); btn.innerText = "SENDING...";
+            const btn = document.getElementById('cloud-btn'); btn.innerText = "SYNCING...";
             const payload = {
                 title: document.getElementById('session-title').value,
                 department: document.getElementById('session-dept').value,
@@ -234,7 +206,7 @@
                 text: document.getElementById('output').value
             };
             fetch(SCRIPT_URL, { method: 'POST', mode: 'no-cors', body: JSON.stringify(payload) })
-            .then(() => { alert("Synced Successfully!"); btn.innerText = "Sync Cloud"; });
+            .then(() => { alert("Sync Complete!"); btn.innerText = "Sync Cloud"; });
         }
 
         function loadLibrary() {
@@ -244,8 +216,8 @@
                 const cursor = e.target.result;
                 if (cursor) {
                     const div = document.createElement('div');
-                    div.className = "glass-panel p-4 rounded-2xl cursor-pointer hover:border-emerald-500";
-                    div.innerHTML = `<h3 class="font-bold text-sm uppercase">${cursor.value.title}</h3><p class="text-[9px] opacity-60">${cursor.value.sessionDate}</p>`;
+                    div.className = "glass-panel p-4 rounded-2xl cursor-pointer hover:border-emerald-500 transition-all";
+                    div.innerHTML = `<h3 class="font-bold text-sm uppercase">${cursor.value.title}</h3><p class="text-[9px] opacity-60 uppercase">${cursor.value.sessionDate}</p>`;
                     div.onclick = () => openEntry(cursor.value.id);
                     list.appendChild(div);
                     cursor.continue();
@@ -262,10 +234,15 @@
                 document.getElementById('session-date-picker').value = d.sessionDate;
                 finalTranscript = d.text;
                 updateWordCount();
+                loadAudioPlayer(d.audio);
                 switchTab('recorder');
             };
         }
 
+        function loadAudioPlayer(blob) { 
+            document.getElementById('audio-player').src = URL.createObjectURL(blob);
+            document.getElementById('audio-replay-container').classList.remove('hidden');
+        }
         function insertTimestamp() { document.getElementById('output').value += `\n[${new Date().toLocaleTimeString()}] `; }
         function copyAllText() { navigator.clipboard.writeText(document.getElementById('output').value); alert("Copied!"); }
         function switchTab(t) {
@@ -273,6 +250,7 @@
             document.getElementById('view-library').classList.toggle('hidden', t !== 'library');
             if(t === 'library') loadLibrary();
         }
+        function prepareNewSession() { if(confirm("Refresh for new session?")) location.reload(); }
     </script>
 </body>
 </html>
