--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BABRN Turbo | Archive Manager</title>
+    <title>BABRN Turbo | Restore Archives</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -36,30 +36,23 @@
         .nav-custom { background: var(--nav-bg); color: white; }
         .word-badge { background: var(--accent); color: white; padding: 2px 10px; border-radius: 20px; font-size: 10px; font-weight: 800; }
         .active-tab { color: #10b981; border-bottom: 2px solid #10b981; }
-        
-        .archive-card { transition: all 0.3s ease; border: 1px solid var(--border); }
-        .archive-card:hover { border-color: var(--accent); transform: translateY(-2px); }
     </style>
 </head>
 <body class="min-h-screen pb-10">
 
     <nav class="nav-custom no-print sticky top-0 z-50 px-6 py-4 mb-8 flex justify-between items-center shadow-lg">
         <div class="flex items-center gap-3">
-            <div class="bg-emerald-500 p-2 rounded-lg"><i class="fas fa-folder-open text-white"></i></div>
+            <div class="bg-emerald-500 p-2 rounded-lg"><i class="fas fa-database text-white"></i></div>
             <h1 class="text-xl font-bold uppercase tracking-tighter">BABRN <span class="text-emerald-400">Turbo</span></h1>
         </div>
 
         <div class="flex items-center gap-6">
-            <div id="autosave-indicator" class="hidden text-[9px] font-extrabold text-emerald-400 uppercase bg-emerald-500/10 px-3 py-1 rounded-full border border-emerald-500/20">
+            <div id="autosave-indicator" class="hidden text-[9px] font-extrabold text-emerald-400 uppercase tracking-widest bg-emerald-500/10 px-3 py-1 rounded-full border border-emerald-500/20">
                 <i class="fas fa-sync-alt fa-spin mr-1"></i> Auto-Saving
             </div>
             <div class="flex gap-8 text-xs font-bold uppercase tracking-widest no-print">
                 <button onclick="switchTab('recorder')" id="tab-recorder" class="active-tab py-2">Editor</button>
                 <button onclick="switchTab('library')" id="tab-library" class="text-slate-400 py-2">Archives</button>
-            </div>
-            <div class="flex gap-2 bg-white/10 p-1 rounded-full">
-                <button onclick="setTheme('dark')" class="w-5 h-5 rounded-full bg-slate-900 border border-white/20"></button>
-                <button onclick="setTheme('light')" class="w-5 h-5 rounded-full bg-slate-100 border border-black/20"></button>
             </div>
         </div>
     </nav>
@@ -67,47 +60,47 @@
     <div class="max-w-7xl mx-auto px-4">
         <div id="view-recorder" class="grid grid-cols-1 lg:grid-cols-12 gap-8">
             <div class="lg:col-span-3 space-y-4 no-print">
-                <div class="glass-panel p-6 rounded-3xl shadow-xl">
-                    <button id="start-btn" class="w-full font-bold py-4 rounded-2xl mb-4 uppercase flex items-center justify-center gap-2 shadow-lg" style="background: var(--accent); color: white;">
-                        <i class="fas fa-microphone"></i> Start Session
+                <div class="glass-panel p-6 rounded-3xl">
+                    <button id="start-btn" class="w-full font-bold py-4 rounded-2xl mb-4 uppercase flex items-center justify-center gap-2" style="background: var(--accent); color: white;">
+                        <i class="fas fa-play"></i> Start Record
                     </button>
-                    <button id="stop-btn" class="hidden w-full bg-red-600 text-white font-bold py-4 rounded-2xl mb-4 animate-pulse uppercase flex items-center justify-center gap-2 shadow-lg">
-                        <i class="fas fa-stop"></i> Stop & Archive
+                    <button id="stop-btn" class="hidden w-full bg-red-600 text-white font-bold py-4 rounded-2xl mb-4 animate-pulse uppercase flex items-center justify-center gap-2">
+                        <i class="fas fa-stop"></i> Stop & Save
                     </button>
-                    <div id="status-display" class="text-[9px] text-center font-bold py-1 px-3 rounded-full bg-black/20 mb-4 opacity-50 uppercase tracking-widest">Ready</div>
+                    <div id="status-display" class="text-[9px] text-center font-bold py-1 px-3 rounded-full bg-black/20 mb-4 opacity-50 uppercase">Ready</div>
                     <div class="space-y-3 pt-4 border-t border-white/10">
-                        <button onclick="copyAllText()" class="w-full py-3 rounded-xl text-[10px] font-bold uppercase border border-white/10 hover:bg-black/5 transition-all">Copy Text</button>
-                        <button onclick="syncToGoogle()" id="cloud-btn" class="w-full bg-blue-700 text-white font-bold py-4 rounded-xl text-[10px] uppercase shadow-lg">Manual Sync</button>
+                        <button onclick="copyAllText()" class="w-full py-3 rounded-xl text-[10px] font-bold uppercase border border-white/10 hover:bg-black/5">Copy</button>
+                        <button onclick="syncToGoogle()" id="cloud-btn" class="w-full bg-blue-700 text-white font-bold py-4 rounded-xl text-[10px] uppercase">Manual Sync</button>
                     </div>
                 </div>
-                <button onclick="prepareNewSession()" class="w-full glass-panel font-bold py-4 rounded-2xl flex items-center justify-center gap-3 hover:bg-black/5 transition-all">
+                <button onclick="prepareNewSession()" class="w-full glass-panel font-bold py-4 rounded-2xl flex items-center justify-center gap-3 hover:bg-black/5">
                     <i class="fas fa-plus text-emerald-500"></i> NEW SESSION
                 </button>
             </div>
 
             <div class="lg:col-span-9">
-                <div class="glass-panel rounded-3xl p-8 shadow-2xl">
+                <div class="glass-panel rounded-3xl p-8 shadow-xl">
                     <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-6">
-                        <input type="text" id="session-prepared-by" placeholder="Prepared By" class="input-accent p-3 rounded-xl text-xs">
+                        <input type="text" id="session-prepared-by" placeholder="Staff Name" class="input-accent p-3 rounded-xl text-xs">
                         <input type="text" id="session-dept" placeholder="Dept" class="input-accent p-3 rounded-xl text-xs">
-                        <input type="text" id="session-title" placeholder="Session Title" class="input-accent p-3 rounded-xl text-xs">
+                        <input type="text" id="session-title" placeholder="Title" class="input-accent p-3 rounded-xl text-xs">
                         <input type="date" id="session-date-picker" class="input-accent p-3 rounded-xl text-xs">
                     </div>
                     <div class="flex justify-between items-center mb-2 px-2 no-print">
-                        <button onclick="insertTimestamp()" class="text-[10px] font-bold text-emerald-400 flex items-center gap-2"><i class="fas fa-clock"></i> TIMESTAMP</button>
+                        <button onclick="insertTimestamp()" class="text-[10px] font-bold text-emerald-400 flex items-center gap-2">+ TIMESTAMP</button>
                         <div class="flex items-center gap-2">
                             <span class="text-[10px] font-bold opacity-60 uppercase">Words:</span>
                             <span id="word-count" class="word-badge">0</span>
                         </div>
                     </div>
-                    <textarea id="output" oninput="updateWordCount()" class="medical-canvas w-full h-[550px] p-8 rounded-2xl text-lg focus:outline-none resize-none shadow-inner" placeholder="Transcription text..."></textarea>
+                    <textarea id="output" oninput="updateWordCount()" class="medical-canvas w-full h-[550px] p-8 rounded-2xl text-lg focus:outline-none resize-none shadow-inner" placeholder="Transcription..."></textarea>
                 </div>
             </div>
         </div>
 
         <div id="view-library" class="hidden no-print">
             <div class="glass-panel rounded-3xl p-8 min-h-[600px]">
-                <h2 class="text-xl font-bold mb-8 uppercase tracking-widest">Saved Records</h2>
+                <h2 class="text-xl font-bold mb-8 uppercase tracking-widest">Archives</h2>
                 <div id="library-list" class="grid grid-cols-1 md:grid-cols-3 gap-6"></div>
             </div>
         </div>
@@ -117,7 +110,6 @@
         const SCRIPT_URL = "https://script.google.com/macros/s/AKfycby6ZIAuBnLUogVY6UxY-4TNb3Zy7iRCVi56UtpfkLg79LXbiTo97PnroSo96lvBS3FF/exec";
         let db, isRecording = false, finalTranscript = "", autoSaveTimer;
 
-        // SPEECH ENGINE + AUTO-HEALING
         const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
         recognition.continuous = true; recognition.interimResults = true; recognition.lang = 'en-US';
 
@@ -132,15 +124,13 @@
             updateWordCount();
         };
 
-        // DATABASE CONNECTION
-        const request = indexedDB.open("BABRN_V_FINAL_ARCHIVE", 1);
+        const request = indexedDB.open("BABRN_FULL_V1", 1);
         request.onupgradeneeded = e => { e.target.result.createObjectStore("sessions", { keyPath: "id" }); };
         request.onsuccess = e => { db = e.target.result; document.getElementById('session-date-picker').valueAsDate = new Date(); loadLibrary(); };
 
-        // SESSION CONTROLS
         document.getElementById('start-btn').onclick = () => {
             isRecording = true; recognition.start();
-            autoSaveTimer = setInterval(syncToGoogle, 300000); // 5 mins
+            autoSaveTimer = setInterval(syncToGoogle, 300000); 
             document.getElementById('start-btn').classList.add('hidden');
             document.getElementById('stop-btn').classList.remove('hidden');
         };
@@ -148,12 +138,12 @@
         document.getElementById('stop-btn').onclick = () => {
             isRecording = false; recognition.stop();
             clearInterval(autoSaveTimer);
-            saveSession();
+            saveToLocal();
             document.getElementById('start-btn').classList.remove('hidden');
             document.getElementById('stop-btn').classList.add('hidden');
         };
 
-        function saveSession() {
+        function saveToLocal() {
             const data = {
                 id: Date.now(),
                 title: document.getElementById('session-title').value || "Untitled",
@@ -172,19 +162,11 @@
             db.transaction("sessions", "readonly").objectStore("sessions").openCursor(null, 'prev').onsuccess = (e) => {
                 const cursor = e.target.result;
                 if (cursor) {
-                    const card = document.createElement('div');
-                    card.className = "archive-card bg-black/10 p-5 rounded-2xl flex flex-col justify-between";
-                    card.innerHTML = `
-                        <div>
-                            <h3 class="font-bold text-sm uppercase mb-1">${cursor.value.title}</h3>
-                            <p class="text-[9px] opacity-60 mb-4">${cursor.value.sessionDate} | BY: ${cursor.value.preparedBy}</p>
-                        </div>
-                        <div class="flex gap-2">
-                            <button onclick="openEntry(${cursor.value.id})" class="flex-1 bg-emerald-500/20 text-emerald-500 py-2 rounded-xl text-[10px] font-bold hover:bg-emerald-500 hover:text-white transition-all">VIEW</button>
-                            <button onclick="deleteEntry(${cursor.value.id})" class="w-10 bg-red-500/10 text-red-500 py-2 rounded-xl text-[10px] hover:bg-red-500 hover:text-white transition-all"><i class="fas fa-trash"></i></button>
-                        </div>
-                    `;
-                    list.appendChild(card);
+                    const div = document.createElement('div');
+                    div.className = "glass-panel p-4 rounded-2xl cursor-pointer hover:border-emerald-500 transition-all";
+                    div.innerHTML = `<h3 class="font-bold text-sm uppercase">${cursor.value.title}</h3><p class="text-[9px] opacity-60 uppercase">${cursor.value.sessionDate}</p>`;
+                    div.onclick = () => openEntry(cursor.value.id);
+                    list.appendChild(div);
                     cursor.continue();
                 }
             };
@@ -202,13 +184,6 @@
                 updateWordCount();
                 switchTab('recorder');
             };
-        }
-
-        function deleteEntry(id) {
-            if(confirm("Permanently delete this record?")) {
-                db.transaction("sessions", "readwrite").objectStore("sessions").delete(id);
-                loadLibrary();
-            }
         }
 
         async function syncToGoogle() {
@@ -245,8 +220,8 @@
         }
 
         function insertTimestamp() { document.getElementById('output').value += `\n[${new Date().toLocaleTimeString()}] `; }
-        function copyAllText() { navigator.clipboard.writeText(document.getElementById('output').value); alert("Text Copied!"); }
-        function prepareNewSession() { if(confirm("Discard current view for a new session?")) location.reload(); }
+        function copyAllText() { navigator.clipboard.writeText(document.getElementById('output').value); alert("Copied!"); }
+        function prepareNewSession() { if(confirm("Refresh for new session?")) location.reload(); }
     </script>
 </body>
 </html>
