--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="glass-card p-8">
                     <div class="grid grid-cols-4 gap-4 mb-8">
                         <div>
-                            <label class="text-[9px] font-bold opacity-40 uppercase px-1">Reference</label>
+                            <label class="text-[9px] font-bold opacity-40 uppercase px-1">Title</label>
                             <input type="text" id="session-title" placeholder="..." class="w-full rounded-xl p-4 text-sm outline-none mt-1 shadow-sm">
                         </div>
                         <div>
@@ -282,3 +282,4 @@
     </script>
 </body>
 </html>
+
